--- a/db/templates/dark-alt.ejs
+++ b/db/templates/dark-alt.ejs
@@ -5,23 +5,23 @@
     <key>author</key>
     <string>adapted from: Simurai (https://github.com/simurai/duotone-dark-syntax/)</string>
     <key>name</key>
-    <string>Base2Tone-Space Dark</string>
+    <string><%- scheme %> Dark</string>
     <key>semanticClass</key>
-    <string>base-2-tone-space</string>
+    <string><%- schemeSlug %></string>
     <key>colorSpaceName</key>
     <string>sRGB</string>
     <key>gutterSettings</key>
     <dict>
       <key>background</key>
-      <string>#fbf9f9</string>
+      <string>#<%- base["A1"]["hex"] %></string>
       <key>divider</key>
-      <string>#fbf9f9</string>
+      <string>#<%- base["A1"]["hex"] %></string>
       <key>foreground</key>
-      <string>#eae4e1</string>
+      <string>#<%- base["A2"]["hex"] %></string>
       <key>selectionBackground</key>
-      <string>#fbf9f9</string>
+      <string>#<%- base["A1"]["hex"] %></string>
       <key>selectionForeground</key>
-      <string>#eae4e1</string>
+      <string>#<%- base["A2"]["hex"] %></string>
     </dict>
     <key>settings</key>
     <array>
@@ -29,33 +29,33 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["A0"]["hex"] %></string>
           <key>caret</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
           <key>foreground</key>
-          <string>#c3bbb7</string>
+          <string>#<%- base["A3"]["hex"] %></string>
           <key>invisibles</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["A1"]["hex"] %></string>
           <key>lineHighlight</key>
-          <string>#eae4e1</string>
+          <string>#<%- base["A1"]["hex"] %></string>
           <key>selection</key>
-          <string>#d8cfcb</string>
+          <string>#<%- base["A1"]["hex"] %></string>
           <key>findHighlight</key>
-          <string>#aaaaca</string>
+          <string>#<%- base["D7"]["hex"] %></string>
           <key>findHighlightForeground</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["A3"]["hex"] %></string>
           <key>selectionBorder</key>
-          <string>#8a8aad</string>
+          <string>#<%- base["A2"]["hex"] %></string>
           <key>bracketsForeground</key>
-          <string>#b25424</string>
+          <string>#<%- base["B7"]["hex"] %></string>
           <key>bracketContentsForeground</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["A0"]["hex"] %></string>
           <key>guide</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["A1"]["hex"] %></string>
           <key>activeGuide</key>
-          <string>#c3bbb7</string>
+          <string>#<%- base["A3"]["hex"] %></string>
           <key>stackGuide</key>
-          <string>#8a8aad</string>
+          <string>#<%- base["A2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -66,29 +66,29 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#cb5c25</string>
+          <string>#<%- base["B5"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
         <key>name</key>
         <string>Comments</string>
         <key>scope</key>
-        <string>comment, punctuation.definition.comment, punctuation, text.html.mt, meta.tag.sgml.html, meta.tag.sgml.doctype.html, text.html.mt, meta.tag.sgml.html, meta.tag.sgml.doctype.html, entity.name.tag.doctype.html, text.html.mt, comment.block.html, comment.line.double-slash.js, punctuation.definition.comment.js, meta.brace.round.js, source.php, source.php.embedded.block.html, punctuation.section.embedded.begin.php, source.php, source.php.embedded.block.html, comment.line.double-slash.php, punctuation.definition.comment.php, source.php, source.php.embedded.block.html, punctuation.definition.entity.css, meta.brace.curly.js</string>
+        <string>comment, punctuation.definition.comment, punctuation, text.html.mt, meta.tag.sgml.html, meta.tag.sgml.doctype.html, text.html.mt, meta.tag.sgml.html, meta.tag.sgml.doctype.html, entity.name.tag.doctype.html, text.html.mt, comment.block.html, source.js, comment.line.double-slash.js, punctuation.definition.comment.js, meta.brace.round.js, source.php, source.php.embedded.block.html, punctuation.section.embedded.begin.php, source.php, source.php.embedded.block.html, comment.line.double-slash.php, punctuation.definition.comment.php, source.php, source.php.embedded.block.html,  punctuation.definition.entity.css</string>
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#c3bbb7</string>
+          <string>#<%- base["A3"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
         <key>name</key>
         <string>Punctuation</string>
         <key>scope</key>
-        <string>punctuation.definition.string, punctuation.definition.variable,  punctuation.definition.parameters, punctuation.definition.array, punctuation.definition.array</string>
+        <string>punctuation.definition.string, punctuation.definition.variable,  punctuation.definition.parameters, punctuation.definition.array, punctuation.definition.array, meta.brace.curly.js</string>
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7b736f</string>
+          <string>#<%- base["A2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -99,29 +99,29 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#767693</string>
+          <string>#<%- base["B3"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
         <key>name</key>
         <string>Operators</string>
         <key>scope</key>
-        <string>support.function.construct, support.type.property-name.css</string>
+        <string>support.function, support.function.construct, support.class, support.type.property-name.css</string>
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#cb5c25</string>
+          <string>#<%- base["B5"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
         <key>name</key>
         <string>Operators</string>
         <key>scope</key>
-        <string>support.function, keyword.operator, source.js</string>
+        <string>keyword.operator, keyword.control</string>
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#cb5c25</string>
+          <string>#<%- base["D4"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -132,7 +132,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7676f4</string>
+          <string>#<%- base["B2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -143,18 +143,18 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["B5"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
         <key>name</key>
         <string>Functions</string>
         <key>scope</key>
-        <string>entity.name.function, entity.name.tag, entity.name.tag.css,  entity.name.tag.structure.any.html, entity.name.tag.block.any.html, entity.name.tag.other.html, entity.other.attribute-name, meta.require, support.function.any-method, meta.function-call, keyword.control.at-rule, storage.type</string>
+        <string>entity.name.function, entity.name.tag, entity.name.tag.css, meta.tag.block.any.html, entity.name.tag.structure.any.html, entity.name.tag.block.any.html, entity.name.tag.other.html, entity.other.attribute-name, meta.require, support.function.any-method, meta.function-call, keyword.control.at-rule</string>
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["B7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -165,7 +165,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["B7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -176,18 +176,18 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["B7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
         <key>name</key>
         <string>Methods</string>
         <key>scope</key>
-        <string>keyword.other.special-method, keyword.other.unit.css, keyword.control, keyword.operator.js</string>
+        <string>keyword.other.special-method</string>
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7676f4</string>
+          <string>#<%- base["D5"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -198,40 +198,40 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7676f4</string>
+          <string>#<%- base["B2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
         <key>name</key>
         <string>Support</string>
         <key>scope</key>
-        <string>string, constant.numeric, constant.character, constant.other, support.constant, constant.language</string>
+        <string>string, constant.numeric, constant.character, constant.other, storage.type, support.constant, constant.language,  string.quoted.double, string.quoted.single</string>
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
         <key>name</key>
         <string>Strings, Inherited Class</string>
         <key>scope</key>
-        <string>string, constant.other.symbol</string>
+        <string>string, constant.other.symbol, source.js</string>
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#aaaaca</string>
+          <string>#<%- base["B5"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
         <key>name</key>
         <string>Integers</string>
         <key>scope</key>
-        <string>constant.numeric.css, entity.other.attribute-selector, string.quoted.double, string.quoted.single, constant.language.boolean</string>
+        <string>constant.numeric</string>
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#5151e6</string>
+          <string>#<%- base["D7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -242,7 +242,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -253,7 +253,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#5151e6</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -264,7 +264,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -275,7 +275,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["B7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -286,7 +286,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["B5"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -297,7 +297,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#f37b3f</string>
+          <string>#<%- base["D5"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -308,7 +308,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["B7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -319,7 +319,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -332,7 +332,7 @@
           <key>fontStyle</key>
           <string></string>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["B7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -343,7 +343,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D4"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -356,7 +356,7 @@
           <key>fontStyle</key>
           <string>bold</string>
           <key>foreground</key>
-          <string>#ec7336</string>
+          <string>#<%- base["D4"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -369,7 +369,7 @@
           <key>fontStyle</key>
           <string>italic</string>
           <key>foreground</key>
-          <string>#7676f4</string>
+          <string>#<%- base["B2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -380,7 +380,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7b736f</string>
+          <string>#<%- base["C0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -391,7 +391,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#5151e6</string>
+          <string>#<%- base["B0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -402,7 +402,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -413,7 +413,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#5151e6</string>
+          <string>#<%- base["B0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -424,7 +424,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -435,9 +435,9 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#b8b8c7</string>
+          <string>#<%- base["A2"]["hex"] %></string>
           <key>foreground</key>
-          <string>#767693</string>
+          <string>#<%- base["B3"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -448,7 +448,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7b736f</string>
+          <string>#<%- base["C0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -459,7 +459,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#5151e6</string>
+          <string>#<%- base["B0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -470,7 +470,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7676f4</string>
+          <string>#<%- base["B2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -481,7 +481,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -492,7 +492,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -503,7 +503,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -514,7 +514,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#6363ee</string>
+          <string>#<%- base["B1"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -525,9 +525,9 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#b25424</string>
+          <string>#<%- base["B0"]["hex"] %></string>
           <key>foreground</key>
-          <string>#fe8c52</string>
+          <string>#<%- base["B7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -538,9 +538,9 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#b25424</string>
+          <string>#<%- base["D3"]["hex"] %></string>
           <key>foreground</key>
-          <string>#fe8c52</string>
+          <string>#<%- base["A0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -551,9 +551,9 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#b25424</string>
+          <string>#<%- base["B1"]["hex"] %></string>
           <key>foreground</key>
-          <string>#fe8c52</string>
+          <string>#<%- base["B7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -564,9 +564,9 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#b25424</string>
+          <string>#<%- base["A3"]["hex"] %></string>
           <key>foreground</key>
-          <string>#fe8c52</string>
+          <string>#<%- base["B7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -577,12 +577,13 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["A0"]["hex"] %></string>
           <key>background</key>
-          <string>#aaaaca</string>
+          <string>#<%- base["D4"]["hex"] %></string>
         </dict>
       </dict>
     </array>
+    <key>uuid</key>
+    <string>79c2d069-ec9d-4af7-9440-91f644cc1bee</string>
   </dict>
 </plist>
-
