--- a/db/templates/light-alt.ejs
+++ b/db/templates/light-alt.ejs
@@ -5,23 +5,23 @@
     <key>author</key>
     <string>adapted from: Simurai (https://github.com/simurai/duotone-dark-syntax/)</string>
     <key>name</key>
-    <string>Base2Tone-Space Dark</string>
+    <string><%- scheme %> Dark</string>
     <key>semanticClass</key>
-    <string>base-2-tone-space</string>
+    <string><%- schemeSlug %></string>
     <key>colorSpaceName</key>
     <string>sRGB</string>
     <key>gutterSettings</key>
     <dict>
       <key>background</key>
-      <string>#fbf9f9</string>
+      <string>#<%- base["C7"]["hex"] %></string>
       <key>divider</key>
-      <string>#fbf9f9</string>
+      <string>#<%- base["C7"]["hex"] %></string>
       <key>foreground</key>
-      <string>#eae4e1</string>
+      <string>#<%- base["C6"]["hex"] %></string>
       <key>selectionBackground</key>
-      <string>#fbf9f9</string>
+      <string>#<%- base["C7"]["hex"] %></string>
       <key>selectionForeground</key>
-      <string>#eae4e1</string>
+      <string>#<%- base["C6"]["hex"] %></string>
     </dict>
     <key>settings</key>
     <array>
@@ -29,33 +29,33 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["C7"]["hex"] %></string>
           <key>caret</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
           <key>foreground</key>
-          <string>#c3bbb7</string>
+          <string>#<%- base["C4"]["hex"] %></string>
           <key>invisibles</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["C7"]["hex"] %></string>
           <key>lineHighlight</key>
-          <string>#eae4e1</string>
+          <string>#<%- base["C6"]["hex"] %></string>
           <key>selection</key>
-          <string>#d8cfcb</string>
+          <string>#<%- base["C5"]["hex"] %></string>
           <key>findHighlight</key>
-          <string>#aaaaca</string>
+          <string>#<%- base["B5"]["hex"] %></string>
           <key>findHighlightForeground</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["C7"]["hex"] %></string>
           <key>selectionBorder</key>
-          <string>#8a8aad</string>
+          <string>#<%- base["B4"]["hex"] %></string>
           <key>bracketsForeground</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
           <key>bracketContentsForeground</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["C7"]["hex"] %></string>
           <key>guide</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["C7"]["hex"] %></string>
           <key>activeGuide</key>
-          <string>#c3bbb7</string>
+          <string>#<%- base["C4"]["hex"] %></string>
           <key>stackGuide</key>
-          <string>#8a8aad</string>
+          <string>#<%- base["B4"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -66,7 +66,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#cb5c25</string>
+          <string>#<%- base["D1"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -77,7 +77,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#c3bbb7</string>
+          <string>#<%- base["C4"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -88,7 +88,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7b736f</string>
+          <string>#<%- base["C0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -99,7 +99,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#767693</string>
+          <string>#<%- base["B3"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -110,7 +110,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#cb5c25</string>
+          <string>#<%- base["D1"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -121,7 +121,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#cb5c25</string>
+          <string>#<%- base["D1"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -132,7 +132,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7676f4</string>
+          <string>#<%- base["B2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -143,7 +143,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -154,7 +154,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -165,7 +165,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -176,7 +176,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -187,7 +187,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7676f4</string>
+          <string>#<%- base["B2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -198,7 +198,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7676f4</string>
+          <string>#<%- base["B2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -209,7 +209,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -220,7 +220,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#aaaaca</string>
+          <string>#<%- base["B5"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -231,7 +231,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#5151e6</string>
+          <string>#<%- base["B0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -242,7 +242,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -253,7 +253,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#5151e6</string>
+          <string>#<%- base["B0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -264,7 +264,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -275,7 +275,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -286,7 +286,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -297,7 +297,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#f37b3f</string>
+          <string>#<%- base["D5"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -308,7 +308,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -319,7 +319,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -332,7 +332,7 @@
           <key>fontStyle</key>
           <string></string>
           <key>foreground</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -343,7 +343,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -356,7 +356,7 @@
           <key>fontStyle</key>
           <string>bold</string>
           <key>foreground</key>
-          <string>#ec7336</string>
+          <string>#<%- base["D4"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -369,7 +369,7 @@
           <key>fontStyle</key>
           <string>italic</string>
           <key>foreground</key>
-          <string>#7676f4</string>
+          <string>#<%- base["B2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -380,7 +380,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7b736f</string>
+          <string>#<%- base["C0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -391,7 +391,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#5151e6</string>
+          <string>#<%- base["B0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -402,7 +402,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -413,7 +413,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#5151e6</string>
+          <string>#<%- base["B0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -424,7 +424,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -435,9 +435,9 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#b8b8c7</string>
+          <string>#<%- base["A7"]["hex"] %></string>
           <key>foreground</key>
-          <string>#767693</string>
+          <string>#<%- base["B3"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -448,7 +448,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7b736f</string>
+          <string>#<%- base["C0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -459,7 +459,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#5151e6</string>
+          <string>#<%- base["B0"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -470,7 +470,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#7676f4</string>
+          <string>#<%- base["B2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -481,7 +481,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -492,7 +492,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -503,7 +503,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#dd672c</string>
+          <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -514,7 +514,7 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#6363ee</string>
+          <string>#<%- base["B1"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -525,9 +525,9 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
           <key>foreground</key>
-          <string>#fe8c52</string>
+          <string>#<%- base["D7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -538,9 +538,9 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
           <key>foreground</key>
-          <string>#fe8c52</string>
+          <string>#<%- base["D7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -551,9 +551,9 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
           <key>foreground</key>
-          <string>#fe8c52</string>
+          <string>#<%- base["D7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -564,9 +564,9 @@
         <key>settings</key>
         <dict>
           <key>background</key>
-          <string>#b25424</string>
+          <string>#<%- base["D0"]["hex"] %></string>
           <key>foreground</key>
-          <string>#fe8c52</string>
+          <string>#<%- base["D7"]["hex"] %></string>
         </dict>
       </dict>
       <dict>
@@ -577,12 +577,11 @@
         <key>settings</key>
         <dict>
           <key>foreground</key>
-          <string>#fbf9f9</string>
+          <string>#<%- base["C7"]["hex"] %></string>
           <key>background</key>
-          <string>#aaaaca</string>
+          <string>#<%- base["B5"]["hex"] %></string>
         </dict>
       </dict>
     </array>
   </dict>
 </plist>
-
