--- a/db/templates/light-alt.ejs
+++ b/db/templates/light-alt.ejs
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-  <dict>
+ <dict>
     <key>author</key>
-    <string>adapted from: Simurai (https://github.com/simurai/duotone-dark-syntax/)</string>
+    <string>Atelierbram - adapted from: Simurai (https://github.com/simurai/duotone-dark-syntax/)</string>
     <key>name</key>
     <string><%- scheme %> Dark</string>
     <key>semanticClass</key>
@@ -22,7 +22,7 @@
       <string>#<%- base["C7"]["hex"] %></string>
       <key>selectionForeground</key>
       <string>#<%- base["C6"]["hex"] %></string>
-    </dict>
+      </dict>
     <key>settings</key>
     <array>
       <dict>
@@ -56,8 +56,8 @@
           <string>#<%- base["C4"]["hex"] %></string>
           <key>stackGuide</key>
           <string>#<%- base["B4"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Text</string>
@@ -67,8 +67,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D1"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Comments</string>
@@ -78,8 +78,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["C4"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Punctuation</string>
@@ -89,8 +89,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Delimiters</string>
@@ -100,8 +100,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B3"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Operators</string>
@@ -111,8 +111,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D1"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Operators</string>
@@ -122,8 +122,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D1"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Keywords</string>
@@ -133,8 +133,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Variables</string>
@@ -144,8 +144,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Functions</string>
@@ -155,8 +155,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Classes</string>
@@ -166,8 +166,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Classes</string>
@@ -177,8 +177,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Methods</string>
@@ -188,8 +188,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Storage</string>
@@ -199,8 +199,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Support</string>
@@ -210,8 +210,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Strings, Inherited Class</string>
@@ -221,8 +221,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B5"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Integers</string>
@@ -232,8 +232,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Floats</string>
@@ -243,8 +243,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Boolean</string>
@@ -254,8 +254,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Constants</string>
@@ -265,8 +265,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Tags</string>
@@ -276,8 +276,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Attributes</string>
@@ -287,8 +287,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Attribute IDs</string>
@@ -298,8 +298,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D5"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Selector</string>
@@ -309,8 +309,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Values</string>
@@ -320,8 +320,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Headings</string>
@@ -333,8 +333,8 @@
           <string></string>
           <key>foreground</key>
           <string>#<%- base["D0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Units</string>
@@ -344,8 +344,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Bold</string>
@@ -357,8 +357,8 @@
           <string>bold</string>
           <key>foreground</key>
           <string>#<%- base["D4"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Italic</string>
@@ -370,8 +370,8 @@
           <string>italic</string>
           <key>foreground</key>
           <string>#<%- base["B2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Code</string>
@@ -381,8 +381,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Link Text</string>
@@ -392,8 +392,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Link Url</string>
@@ -403,8 +403,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Lists</string>
@@ -414,8 +414,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Quotes</string>
@@ -425,8 +425,140 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
+      <dict>
+        <key>name</key>
+        <string>Java Source</string>
+        <key>scope</key>
+        <string>source.java meta.class.java meta.method.java</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Java Class Body</string>
+        <key>scope</key>
+        <string>source.java meta.class.java meta.class.body.java</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Function Arguments</string>
+        <key>scope</key>
+        <string>source.js meta.function.js variable.parameter.function.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["D4"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: New Variables</string>
+        <key>scope</key>
+        <string>source.js variable.other.readwrite.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["D4"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Variables</string>
+        <key>scope</key>
+        <string>source.js variable.other.object.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Variables in Function Calls</string>
+        <key>scope</key>
+        <string>source.js meta.function-call.method.js variable.other.readwrite.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["D4"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: New Block Variables</string>
+        <key>scope</key>
+        <string>source.js meta.block.js variable.other.readwrite.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["D4"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Block Variables</string>
+        <key>scope</key>
+        <string>source.js meta.block.js variable.other.object.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Block Variables in Function Calls</string>
+        <key>scope</key>
+        <string>source.js meta.block.js meta.function-call.method.js variable.other.readwrite.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Function Calls</string>
+        <key>scope</key>
+        <string>source.js meta.function-call.method.js variable.function.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Properties</string>
+        <key>scope</key>
+        <string>source.js meta.property.object.js entity.name.function.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Prototypes</string>
+        <key>scope</key>
+        <string>source.js support.constant.prototype.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
+        </dict>
       <dict>
         <key>name</key>
         <string>Separator</string>
@@ -438,8 +570,8 @@
           <string>#<%- base["A7"]["hex"] %></string>
           <key>foreground</key>
           <string>#<%- base["B3"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Inserted</string>
@@ -449,8 +581,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["C0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Deleted</string>
@@ -460,8 +592,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B0"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Changed</string>
@@ -471,8 +603,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Colors</string>
@@ -482,8 +614,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Regular Expressions</string>
@@ -493,8 +625,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Escape Characters</string>
@@ -504,8 +636,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["D2"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Embedded</string>
@@ -515,8 +647,8 @@
         <dict>
           <key>foreground</key>
           <string>#<%- base["B1"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Illegal</string>
@@ -528,8 +660,8 @@
           <string>#<%- base["D0"]["hex"] %></string>
           <key>foreground</key>
           <string>#<%- base["D7"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Broken</string>
@@ -541,8 +673,8 @@
           <string>#<%- base["D0"]["hex"] %></string>
           <key>foreground</key>
           <string>#<%- base["D7"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Deprecated</string>
@@ -554,8 +686,8 @@
           <string>#<%- base["D0"]["hex"] %></string>
           <key>foreground</key>
           <string>#<%- base["D7"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Unimplemented</string>
@@ -567,8 +699,8 @@
           <string>#<%- base["D0"]["hex"] %></string>
           <key>foreground</key>
           <string>#<%- base["D7"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
       <dict>
         <key>name</key>
         <string>Block Cursor</string>
@@ -580,8 +712,8 @@
           <string>#<%- base["C7"]["hex"] %></string>
           <key>background</key>
           <string>#<%- base["B5"]["hex"] %></string>
+          </dict>
         </dict>
-      </dict>
-    </array>
-  </dict>
-</plist>
+      </array>
+    </dict>
+  </plist>
