--- a/db/templates/dark-alt.ejs
+++ b/db/templates/dark-alt.ejs
@@ -3,7 +3,7 @@
 <plist version="1.0">
   <dict>
     <key>author</key>
-    <string>adapted from: Simurai (https://github.com/simurai/duotone-dark-syntax/)</string>
+    <string>Atelierbram - adapted from: Simurai (https://github.com/simurai/duotone-dark-syntax/)</string>
     <key>name</key>
     <string><%- scheme %> Dark</string>
     <key>semanticClass</key>
@@ -427,6 +427,138 @@
           <string>#<%- base["D2"]["hex"] %></string>
         </dict>
       </dict>
+      <dict>
+        <key>name</key>
+        <string>Java Source</string>
+        <key>scope</key>
+        <string>source.java meta.class.java meta.method.java</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C7"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Java Class Body</string>
+        <key>scope</key>
+        <string>source.java meta.class.java meta.class.body.java</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C7"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Function Arguments</string>
+        <key>scope</key>
+        <string>source.js meta.function.js variable.parameter.function.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["D3"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: New Variables</string>
+        <key>scope</key>
+        <string>source.js variable.other.readwrite.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["D3"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Variables</string>
+        <key>scope</key>
+        <string>source.js variable.other.object.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C7"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Variables in Function Calls</string>
+        <key>scope</key>
+        <string>source.js meta.function-call.method.js variable.other.readwrite.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["D3"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: New Block Variables</string>
+        <key>scope</key>
+        <string>source.js meta.block.js variable.other.readwrite.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["D3"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Block Variables</string>
+        <key>scope</key>
+        <string>source.js meta.block.js variable.other.object.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C7"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Block Variables in Function Calls</string>
+        <key>scope</key>
+        <string>source.js meta.block.js meta.function-call.method.js variable.other.readwrite.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C7"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Function Calls</string>
+        <key>scope</key>
+        <string>source.js meta.function-call.method.js variable.function.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C7"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Properties</string>
+        <key>scope</key>
+        <string>source.js meta.property.object.js entity.name.function.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C7"]["hex"] %></string>
+          </dict>
+        </dict>
+      <dict>
+        <key>name</key>
+        <string>Javascript: Prototypes</string>
+        <key>scope</key>
+        <string>source.js support.constant.prototype.js</string>
+        <key>settings</key>
+        <dict>
+          <key>foreground</key>
+          <string>#<%- base["C7"]["hex"] %></string>
+          </dict>
+        </dict>
       <dict>
         <key>name</key>
         <string>Separator</string>
